# osu-somtum-patcher

./: .gitignore  LICENSE  README.md  build.sh
.github/workflows/: _build.yml  build.yml  pr.yml
akatsuki-pp-ffi/: Cargo.toml
akatsuki-pp-ffi/bindings/: akatsuki_pp_ffi.cs  akatsuki_pp_ffi.h  akatsuki_pp_ffi.py
akatsuki-pp-ffi/src/: lib.rs
akatsuki-pp-ffi/tests/: c_bindings.rs  csharp_bindings.rs  py_bindings.rs
patcher-ui/: OsuPatcher.UI.sln
patcher-ui/OsuPatcher.UI/: App.xaml  App.xaml.cs  Config.cs  InjectorCore.cs  MainForm.cs  MainWindow.xaml  MainWindow.xaml.cs  OsuPatcher.UI.csproj  Program.cs  packages.config
patcher/OsuPatcher.Runtime/: Main.cs  OsuPatcher.Runtime.csproj
patcher/OsuPatcher.Runtime/Options/: FontAwesome.cs  Options.cs
patcher/OsuPatcher.Runtime/Patches/: PlayerOnLoadCompletePatch.cs  PlayerUpdatePatch.cs  RelaxMissPatch.cs
patcher/OsuPatcher.Runtime/Properties/: AssemblyInfo.cs
patcher/OsuPatcher.Runtime/Resolver/: GameState.cs
patcher/OsuPatcher.Runtime/Rosu/: Calculator.cs
